--- a/CSS/form.css
+++ b/CSS/form.css
@@ -29,6 +29,7 @@ a {
   padding: 20px 25px;
   border-radius: 5px;
   margin-bottom: 25px;
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
 }
 
 .header_title {
